# airflow-datapipeline

./: .gitignore  README.md  example.env  psqltocsv_dag.py  pyproject.toml
dags/: datapipeline_dag.py  hello_world.py
operators/: psqltocsv_operator.py  psqltos3_operator.py
